# currency_exchange_fastapi

./: .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.dev.yml  docker-compose.prod.yml  main.py  pyproject.toml  pytest.ini
nginx/: Dockerfile  nginx.conf
nginx/frontend/: index.html
nginx/frontend/js/: app.js
src/: dependencies.py  exceptions.py  logger_config.py  schemas.py
src/database/: config.py  database.py  session_maker.py
src/migrations/: env.py
src/migrations/versions/: 2b6344ee8bbe_initial_revision.py  a658c02f1847_initial_migration.py
src/models/: __init__.py  config.py  database.py  models.py  session_maker.py
src/repository/: currency_repository_impl.py  exchange_rate_repository_impl.py
src/repository/interface/: base.py  currency_repository.py  exchange_repository.py
src/routers/: currencies.py  exchange.py  exchange_rate.py  exeption_handler.py
src/services/: conversion_service.py  currency_service.py  exchange_service.py
tests/: conftest.py  test_currencies.py  test_exchange_rate.py
