[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["Dima <strogansev.dima@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["all"], version = "^0.115.8"}
sqlalchemy = {extras = ["asyncio"], version = "^2.0.38"}


[tool.poetry.group.dev.dependencies]
black = "^25.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
